Fixed message dialog sizing on profile page and removed unnecessary z-index embedded on two info elements

--- a/app/assets/stylesheets/network.css.scss
+++ b/app/assets/stylesheets/network.css.scss
@@ -2,6 +2,18 @@
 $green: #00c088;
 
 #network, #users {
+
+  .modal-body {
+    max-height: 500px;
+    overflow-y: scroll;
+    textarea {
+      height: 200px;
+    }
+    form {
+      display: inline;
+    }
+  }
+
   .carousel {
     margin-top: 40px;
     background: none;
